<resources>
    <string name="app_name">My TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_us">About Us</string>
    <string name="current_todos">Your current tasks:</string>
    <string name="add_task_button_text">Create new TODO</string>
    <string name="clear_button_text">Delete all Tasks</string>
    <string name="text_title">Enter a title for your TODO</string>
    <string name="title_hint">Christmas shopping</string>
    <string name="create_new_task">Create new Task</string>
    <string name="text_description">Enter description of your TODO</string>
    <string name="description_hint">Buy gifts for family</string>
    <string name="text_due_date">Enter TODO\'s due date</string>
    <string name="due_date_hint">yyyy-MM-dd</string>
    <string name="save">Save</string>
    <string name="due_date">Due date: %s</string>
    <string name="floating_action_button">Add a new task</string>
    <string name="edit_task">Edit Task:</string>
    <string name="edit_task_title">Edit Task Title:</string>
    <string name="edit_task_description">Edit Task Description:</string>
    <string name="edit_task_date">Edit Task Due Date:</string>
    <string name="category">Enter Task Category</string>
    <string name="edit_category">Edit Task Category</string>
    <string name="hint_category">chores</string>
    <string name="about_text">This app will help you track your current tasks, no matter their type.You can add new tasks, personalize their title and description, choose a due date, as well as choose a category.\nThis project represent the final project of the Android Fundamentals in Kotlin Course</string>
    <string name="author">This app was created by\nRaduta Lavinia-Maria\nDecember 2022</string>
    <string name="find_me">Find me on:</string>
    <string name="author_github"><a href="https://github.com/laviniaraduta">GitHub</a></string>
    <string name="author_linkedin"><a href="https://www.linkedin.com/in/lavinia-maria-raduta-849197224/">LinkedIn</a></string>

    <string name="share">Share</string>
    <string name="contact">Contact</string>
    <string name="settings">Settings</string>


    <string name="app_settings">Application Settings</string>
    <string name="dark_mode">Enable Dark mode</string>
    <string name="dark_mode_select">Dark mode</string>
    <string name="select_language">App language</string>

    <string name="placeholder_name">Lavinia-Maria Raduta</string>
    <string name="placeholder_email">lavinia.raduta@gmail.com</string>


    <string-array name="categories">
        <item>family</item>
        <item>school</item>
        <item>chores</item>
        <item>voluntary</item>
        <item>personal care</item>
        <item>event</item>
    </string-array>

    <string-array name="languages">
        <item>english</item>
        <item>romana</item>
    </string-array>


</resources>