<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.ContactFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorSecondary">

        <ImageView
            android:id="@+id/aboutImage"
            android:layout_width="141dp"
            android:layout_height="141dp"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="@dimen/horizontal_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/app_logo_round" />

        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="32sp"
            android:layout_marginTop="30dp"
            app:fontFamily="@font/black_han_sans"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/aboutImage" />


        <TextView
            android:id="@+id/authorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="92dp"
            android:layout_marginEnd="40dp"
            android:text="@string/author"
            android:textAlignment="center"
            android:textColor="?attr/colorOnSecondary"

            android:textSize="20sp"
            app:fontFamily="@font/black_han_sans"


            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appName" />

        <TextView
            android:id="@+id/findMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/find_me"
            android:textAlignment="center"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/authorText" />

        <TextView
            android:id="@+id/github"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-180dp"
            android:text="@string/author_github"
            android:textAlignment="center"
            android:textColorLink="?attr/colorOnSecondary"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.529"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/findMe" />

        <TextView
            android:id="@+id/linkedin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/author_linkedin"
            android:textAlignment="center"
            android:textColor="?attr/colorOnSecondary"
            android:textColorLink="?attr/colorOnSecondary"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.474"
            app:layout_constraintStart_toEndOf="@id/github"
            app:layout_constraintTop_toBottomOf="@id/findMe" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>